[project]
name = "yc-billing-mcp"
version = "0.1.0"
description = "MCP server for Yandex Cloud Billing API (accounts, services, SKU prices)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "yandexcloud>=0.300",
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.scripts]
yc-billing-mcp = "yc_billing_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yc_billing_mcp"]
